# duckdb_motorsport_telemetry

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
community-extension/: description.yml
crates/cosworth-telemetry/: Cargo.toml  README.md
crates/cosworth-telemetry/examples/: inspect_cosworth.rs
crates/cosworth-telemetry/src/: lib.rs
crates/duckdb-motorsport-telemetry/: Cargo.toml
crates/duckdb-motorsport-telemetry/src/: lib.rs
crates/motec-telemetry/: Cargo.toml  README.md
crates/motec-telemetry/examples/: inspect_motec.rs
crates/motec-telemetry/src/: lib.rs
crates/telemetry-core/: Cargo.toml  README.md
crates/telemetry-core/src/: lib.rs
crates/vbo-telemetry/: Cargo.toml  README.md
crates/vbo-telemetry/examples/: inspect_vbo.rs
crates/vbo-telemetry/src/: lib.rs
docs/: community-extension-submission.md
resources/: extension-repository-index.html
scripts/: append_metadata.py  build_wasm_extension.sh  package_extension.py  pds_stats.py  telemetry_stats.py
skills/duckdb-motorsport-telemetry/: SKILL.md
src/: lib.rs  parser.rs
test/sql/: registration.test
tests/: integration.sh
wasm-extension/: Cargo.toml  README.md
wasm-extension/src/: unused_lib.rs  wasm_lib.rs
web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts  style.css
web/tests/: smoke.mjs
