[package]
name = "duckdb-pds"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
license = "MIT"
description = "Fast Pi/Cosworth PDS telemetry reader for DuckDB"

[lib]
name = "pds"
crate-type = ["cdylib", "rlib"]

[dependencies]
duckdb = { version = "=1.4.3", features = ["vtab-loadable", "loadable-extension"] }
duckdb-loadable-macros = "=0.1.13"
glob = "0.3"
libduckdb-sys = { version = "=1.4.3", features = ["loadable-extension"] }
memmap2 = "0.9"
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
