[workspace]
resolver = "2"
members = [
    "crates/telemetry-core",
    "crates/cosworth-telemetry",
    "crates/motec-telemetry",
    "crates/vbo-telemetry",
    "crates/duckdb-motorsport-telemetry",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.84"
license = "MIT"
repository = "https://github.com/tobi/duckdb_motorsport_telemetry"

[workspace.dependencies]
motorsport-telemetry-core = { version = "0.4.0", path = "crates/telemetry-core" }
cosworth-telemetry = { version = "0.4.0", path = "crates/cosworth-telemetry" }
motec-telemetry = { version = "0.4.0", path = "crates/motec-telemetry" }
vbo-telemetry = { version = "0.4.0", path = "crates/vbo-telemetry" }
memmap2 = "0.9"
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
