[package]
name = "motec-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone Rust parser for MoTeC LD telemetry"

[lib]
name = "motec_telemetry"

[dependencies]
motorsport-telemetry-core.workspace = true
memmap2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
