[package]
name = "vbo-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone Rust parser for Racelogic VBOX VBO telemetry"

[lib]
name = "vbo_telemetry"

[dependencies]
motorsport-telemetry-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
